add routes have been added
