# helpers/validation_schema.js
@@ -28,8 +28,26 @@ const updateUserSchema = Joi.object({
   gender: Joi.string().empty('')
 });
 
+const createEventSchema = Joi.object({
+  eventName: Joi.string().required(),
+  participants: Joi.array().items(Joi.string()).required(),
+  location: Joi.string().max(100).required(),
+  description: Joi.string().max(200).required(),
+  host: Joi.string().required()
+});
+
+const updateEventSchema = Joi.object({
+  eventName: Joi.string().empty(''),
+  participants: Joi.array().items(Joi.string()).empty(''),
+  location: Joi.string().max(100).empty(''),
+  description: Joi.string().max(200).empty(''),
+  host: Joi.string().empty('')
+});
+
 module.exports = {
   authSchema,
   createUserSchema,
-  updateUserSchema
+  updateUserSchema,
+  createEventSchema,
+  updateEventSchema
 };
