# routes/index.js
@@ -2,6 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/users', require('./users'));
-// router.use('/events', require('./events'));
+router.use('/events', require('./events'));
 
 module.exports = router;
